# python-project-lvl3

./: .codeclimate.yml  .coveragerc  .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python_package.yml
page_loader/: __init__.py  cli.py  download_lib.py  downloader.py  errors.py  logger_config.py  page_parser.py  parsers.py  resource_handler.py  resources.py  url_parser.py  urls.py
page_loader/scripts/: page_loader.py
tests/: test_downloader_status_codes.py  test_page_loader.py  test_page_loader_exceptions.py  test_page_loader_img.py  test_page_loader_mock.py
tests/fixtures/: digital-ai-after-img.html  digital-ai-before.html  digital-ai-img-after.html  digital-ai-img-before.html  httpbin-org-html.html  ru-hexlet-io-courses.html
tests/fixtures/css/: Tz2Slcsk93w.css
tests/fixtures/js/: Foa5XQDLxY.js
