[tool.poetry]
name = "hexlet-code"
version = "0.1.2"
description = ""
authors = ["sinist3rr <darkfloki@protonmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
requests = "^2.25.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
